svc1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
#  type: LoadBalancer
#  type: NodePort
  selector:
    name: svc1
  ports:
  - port: 8080
    targetPort: 8080
    name: web
