svc1-nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: svc1-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: svc1.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: svc1
          servicePort: web
  tls:
   - secretName: svc1-tls-cert
